--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,4 @@
 FROM nvcr.io/nvidia/tensorflow:22.09-tf2-py3
-#FROM python:latest
 
 # where external files are mapped to
 ARG APP_DIR="/app"
@@ -42,20 +41,11 @@ RUN pip install jupyterlab_code_formatter==v1.4.11
 RUN jupyter server extension enable --py jupyterlab_code_formatter
 RUN pip install isort yapf black
 
-# plotly jl extension
-RUN pip install "ipywidgets>=7.5"
-RUN jupyter labextension install jupyterlab-plotly --no-build
-RUN jupyter labextension install @jupyter-widgets/jupyterlab-manager plotlywidget --no-build
-RUN pip install plotly
-
 # lsp jl extension
 # https://github.com/krassowski/jupyterlab-lsp
 RUN pip install jupyterlab-lsp
 RUN pip install python-language-server[all]
 
-# jl debugger extension
-# RUN pip install xeus-python
-# RUN jupyter labextension install @jupyterlab/debugger --no-build
 
 # build jupyter lab assets
 RUN jupyter lab build
@@ -77,18 +67,11 @@ CMD ["sh", "/cmd"]
 RUN pip install pydot
 RUN apt-get install -y graphviz
 
-# kaggle cli
-ENV KAGGLE_CONFIG_DIR ${APP_DIR}
-RUN pip install kaggle
-
 # pre-approve github host
 RUN mkdir /root/.ssh && ssh-keyscan github.com >> /root/.ssh/known_hosts
 
 # torch
 RUN pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu113
-
-# for ScaledYOLOv4
-# RUN pip install torch==1.7.1+cu110 torchvision==0.8.2+cu110 torchaudio==0.7.2 -f https://download.pytorch.org/whl/torch_stable.html
 
 # python packages
 RUN pip install pandas
@@ -102,9 +85,8 @@ RUN pip install tqdm
 RUN apt-get install -y libsndfile1
 RUN pip install tables
 RUN pip install tfa-nightly
-RUN pip install pillow
-RUN pip install onnx
 RUN pip install annoy
+RUN pip install pytorch_metric_learning
 
 # tmp fix for https://github.com/jupyterlab/jupyterlab/issues/10228
 RUN jupyter server extension disable nbclassic
